server browser/ui improvements
Former-commit-id: 7909e8461f309619ee4dc4edbfcf3fa42560cd03

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -351,7 +351,7 @@ newgui game [
 					mutsbefore = $mutsselected
 				]
 				guistrut 2
-				guilist [ guiimage $mapimg [@(format "start %1 on %2" (gamename $modeselected $mutsselected) $mapcur)] 8 1 "textures/nothumb" ]
+				guilist [ guiimage $mapimg [@(format "start %1 on %2" (gamename $modeselected $mutsselected) $mapcur)] 8 1 "textures/emblem" ]
 			]
 			guistrut 2
 			guilist [
@@ -493,17 +493,17 @@ newgui game [
 					guilist [
 						guilist [ varfld spawnweapon 14 ]
 						guistrut 1
-						guistayopen [ guiimage (format "textures/%1" (at $weapname $spawnweapon)) [] 0.5 0 "textures/nothumb" ]
+						guistayopen [ guiimage (format "textures/%1" (at $weapname $spawnweapon)) [] 0.5 0 "textures/emblem" ]
 					]
 					guilist [
 						guilist [ varfld instaweapon 14 ]
 						guistrut 1
-						guistayopen [ guiimage (format "textures/%1" (at $weapname $instaweapon)) [] 0.5 0 "textures/nothumb" ]
+						guistayopen [ guiimage (format "textures/%1" (at $weapname $instaweapon)) [] 0.5 0 "textures/emblem" ]
 					]
 					guilist [
 						guilist [ varfld trialweapon 14 ]
 						guistrut 1
-						guistayopen [ guiimage (format "textures/%1" (at $weapname $trialweapon)) [] 0.5 0 "textures/nothumb" ]
+						guistayopen [ guiimage (format "textures/%1" (at $weapname $trialweapon)) [] 0.5 0 "textures/emblem" ]
 					]
 					varfld spawngrenades 16
 					varfld spawnprotect 16
@@ -606,14 +606,15 @@ newgui game [
 
 newgui servers [
 	guistayopen [
+		guilist [ guistrut 120 ]
 		guilist [
-			guibutton "update "						updatefrommaster
-			guibutton "reset "						clearservers
-			guibutton "default sort "				serversortreset
-			guicheckbox "search lan "				searchlan
-            guibar
-            guibutton "disconnect "                 disconnect server
-            guibutton "lan "                        lanconnect          server
+			guistrut 2
+			guibutton "^fgupdate list"					updatefrommaster;	guistrut 2
+			guibutton "^frreset list"					clearservers;		guistrut 2
+            guibutton "^fodisconnect"					disconnect;			guistrut 2
+            guibutton "^fmlan connect"					lanconnect;			guistrut 2
+			guicheckbox "^fcsearch lan"					searchlan;			guistrut 2
+			guibutton "^fyreset sort order"				serversortreset;	guistrut 2
 		]
 	]
 	guiservers
