--- a/data/maps/venus.cfg
+++ b/data/maps/venus.cfg
@@ -32,7 +32,7 @@
 // floorz 0.867
 // fog 1000
 // fogcolour 0xCCCCCC
-fogdomecap 1
+// fogdomecap 1
 // fogdomeheight 0.0
 // fogdomemax 1.0
 // fogdomemin 0.0
@@ -42,7 +42,13 @@ fogdomecap 1
 // grassheight 6
 // grassscale 2
 // gravity 50.0
+// impulsecost 1000
+// impulsecount 5
+// impulsemeter 30000
+// impulseregen 5.0
+// impulseskate 1000
 // impulsespeed 50.0
+// impulsestyle 1
 // jumpspeed 50.0
 // ladderspeed 1.0
 // lavacolour 0xFF4400
