fix mapmodel clipping in bloodgrounds, lighting/colouring tweaks for dutility
Former-commit-id: ab62b4f59cddf5bb890c75e74d557a4780a34706

--- a/data/maps/bloodgrounds.cfg
+++ b/data/maps/bloodgrounds.cfg
@@ -32,13 +32,23 @@
 // floorz 0.867
 // fog 4000
 // fogcolour 0x8099B3
+// fogdomecap 0
+// fogdomeheight -0.5
+// fogdomemax 0.0
+// fogdomemin 0.0
 // grassanimmillis 3000
 // grassanimscale 0.03
 // grassblend 1.0
 // grassheight 4
 // grassscale 2
 // gravity 50.0
+// impulsecost 1000
+// impulsecount 5
+// impulsemeter 30000
+// impulseregen 5.0
+// impulseskate 1000
 // impulsespeed 50.0
+// impulsestyle 1
 // jumpspeed 50.0
 // ladderspeed 1.0
 // lavacolour 0xFF4400
@@ -60,7 +70,7 @@
 // mmskylight 1
 // movecrawl 0.5
 // movespeed 50.0
-numplayers 6
+// numplayers 6
 // obitdeath ""
 // obitwater ""
 // refractfog 1
