--- a/data/maps/dutility.cfg
+++ b/data/maps/dutility.cfg
@@ -5,7 +5,7 @@
 // adaptivesample 2
 // aircurb 25.0
 // ambient 0x222222
-// blurlms 2
+// blurlms 0
 // blurskylight 0
 // bumperror 3
 // causticscale 100
@@ -15,23 +15,23 @@
 // cloudclip 0.0
 // cloudcolour 0xFFFFFF
 // cloudfade 0.2
-// cloudglare 0
-// cloudheight -0.1
+// cloudglare 1
+// cloudheight 0.001
 // cloudlayer "acord/cloudlayer"
 // cloudlayerblend 1.0
-// cloudlayercolour 0x333333
-// cloudlayerglare 0
-// cloudscale 2.0
-// cloudscrollx 0.1
-// cloudscrolly 0.0
+// cloudlayercolour 0xAAAAAA
+// cloudlayerglare 1
+// cloudscale 0.001
+// cloudscrollx 0.05
+// cloudscrolly -0.05
 // cloudsubdiv 16
 // edgetolerance 4
 // envmapradius 128
 // flarelights 0
 // floorcurb 5.0
 // floorz 0.867
-// fog 4000
-// fogcolour 0xAAAAAA
+// fog 900
+// fogcolour 0x888888
 // fogdomecap 1
 // fogdomeheight -0.5
 // fogdomemax 1.0
@@ -41,7 +41,7 @@
 // grassblend 1.0
 // grassheight 4
 // grassscale 2
-// gravity 50.0
+// gravity 40.0
 // impulsecost 1000
 // impulsecount 5
 // impulsemeter 30000
@@ -79,15 +79,15 @@
 // skybgcolour 0x000000
 // skybgglare 0
 // skyblend 1.0
-// skybox "skyboxes/grey"
+// skybox "skyboxes/stars"
 // skycolour 0xFFFFFF
 // skyglare 1
-// skylight 0xFFFFFF
+// skylight 0x111111
 // skytexture 1
 // slopez 0.5
-// spincloudlayer 0.5
+// spincloudlayer 1.0
 // spinclouds 0.0
-// spinsky 0.0
+// spinsky 3.0
 // stairheight 4.1
 // stepspeed 1.0
 // vertwater 1
@@ -123,6 +123,7 @@ texture c "<mad:0.75/0.25/0.125>acord/nfloor1.jpg" 0 0 0 0.500000 // 2
 texture n "acord/nfloor1n.jpg"
 texture s "acord/nfloor1s.jpg"
 texture z "acord/nfloor1z.jpg"
+texlayer 153
 
 setshader bumpspecmapparallaxworld
 texture c "<mad:0.25/0.75/0.125>acord/nfloor1.jpg" 0 0 0 0.500000 // 3
@@ -135,6 +136,7 @@ texture c "<mad:0.125/0.25/0.75>acord/nfloor1.jpg" 0 0 0 0.500000 // 4
 texture n "acord/nfloor1n.jpg"
 texture s "acord/nfloor1s.jpg"
 texture z "acord/nfloor1z.jpg"
+texlayer 153
 
 setshader bumpspecmapparallaxworld
 texture c "<mad:0.75/0.75/0.25>acord/nfloor1.jpg" 0 0 0 0.500000 // 5
@@ -153,6 +155,7 @@ texture c "<mad:0.75/0.75/0.75>acord/nfloor1.jpg" 0 0 0 0.500000 // 7
 texture n "acord/nfloor1n.jpg"
 texture s "acord/nfloor1s.jpg"
 texture z "acord/nfloor1z.jpg"
+texlayer 153
 
 setshader stdworld
 texture c "acord/blood.png" 0 0 0 1.000000 // 8
@@ -1019,7 +1022,7 @@ texture s "acord/highspec.jpg"
 texture z "acord/ice_oldz.png"
 
 setshader bumpspecmapparallaxworld
-texture c "acord/snow_fine.png" 1 0 0 0.500000 // 153
+texture c "<mad:0.3/0.3/0.3>acord/snow_fine.png" 1 0 0 0.500000 // 153
 texture n "acord/snow_finen.png"
 texture s "acord/highspec.jpg"
 texture z "acord/snow_finez.png"
@@ -2058,9 +2061,10 @@ texture n "trak/trak4/concrete5_nm.png"
 texture s "trak/trak4/concrete5_s.jpg"
 
 setshader bumpspecmapparallaxworld
-texture c "trak/trak4/concrete5b.jpg" 0 0 0 1.000000 // 328
+texture c "trak/trak4/concrete5b.jpg" 0 0 0 0.500000 // 328
 texture n "trak/trak4/concrete5_nm.png"
 texture s "trak/trak4/concrete5_s.jpg"
+texlayer 153
 
 setshader bumpspecmapparallaxworld
 texture c "trak/trak4/concrete6.jpg" 0 0 0 1.000000 // 329
