some colouring tweaks
Former-commit-id: b1cbd9f45363cdb2af82e77aca4c9b7367673844

--- a/data/maps/dutility.cfg
+++ b/data/maps/dutility.cfg
@@ -4,8 +4,8 @@
 // Variables stored in map file, may be uncommented here, or changed from editmode.
 // adaptivesample 2
 // aircurb 25.0
-// ambient 0x222222
-// blurlms 0
+// ambient 0x010101
+// blurlms 2
 // blurskylight 0
 // bumperror 3
 // causticscale 100
@@ -53,7 +53,7 @@
 // ladderspeed 1.0
 // lavacolour 0xFF4400
 // lavafog 50
-// lerpangle 44
+// lerpangle 60
 // lerpsubdiv 2
 // lerpsubdivsize 4
 // lightcompress 3
@@ -79,8 +79,8 @@
 // skybgcolour 0x000000
 // skybgglare 0
 // skyblend 1.0
-// skybox "skyboxes/stars"
-// skycolour 0xFFFFFF
+// skybox "skyboxes/gradient"
+// skycolour 0xAAAAAA
 // skyglare 1
 // skylight 0x111111
 // skytexture 1
@@ -1022,9 +1022,9 @@ texture s "acord/highspec.jpg"
 texture z "acord/ice_oldz.png"
 
 setshader bumpspecmapparallaxworld
-texture c "<mad:0.3/0.3/0.3>acord/snow_fine.png" 1 0 0 0.500000 // 153
+texture c "<mad:0.25/0.25/0.25>acord/snow_fine.png" 1 0 0 0.500000 // 153
 texture n "acord/snow_finen.png"
-texture s "acord/highspec.jpg"
+texture s "acord/lowspec.jpg"
 texture z "acord/snow_finez.png"
 
 setshader bumpspecmapparallaxworld
