binary, dutility lighting fixes
Former-commit-id: 3eea36a62e79a41adf19a734fd51d4ba53176dd5

--- a/data/maps/dutility.cfg
+++ b/data/maps/dutility.cfg
@@ -4,7 +4,7 @@
 // Variables stored in map file, may be uncommented here, or changed from editmode.
 // adaptivesample 2
 // aircurb 25.0
-// ambient 0x010101
+// ambient 0x111111
 // blurlms 2
 // blurskylight 0
 // bumperror 3
@@ -53,7 +53,7 @@
 // ladderspeed 1.0
 // lavacolour 0xFF4400
 // lavafog 50
-// lerpangle 60
+// lerpangle 44
 // lerpsubdiv 2
 // lerpsubdivsize 4
 // lightcompress 3
@@ -82,7 +82,7 @@
 // skybox "skyboxes/gradient"
 // skycolour 0xAAAAAA
 // skyglare 1
-// skylight 0x111111
+// skylight 0xFFFFFF
 // skytexture 1
 // slopez 0.5
 // spincloudlayer 1.0
