resetvarsonend default back to 2, added resetmmonend to reset mastermode and defaulted it to 2 as well, turn modelimit down to lobby so all modes are accessible again
Former-commit-id: 4a693959f6d71fb72a7f714fba36ca36651d1799

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -324,7 +324,7 @@ newgui game [
 			guilist [
 				guilist [
 					guitext "gamemode"
-					guiradio "lobby"						modeselected 1
+					//guiradio "lobby"						modeselected 1
 					guiradio "editing"						modeselected 2
 					guiradio "story"						modeselected 3
 					guiradio "deathmatch"					modeselected 4
@@ -353,7 +353,7 @@ newgui game [
 				guistrut 2
 				guilist [ guiimage $mapimg [@(format "start %1 on %2" (gamename $modeselected $mutsselected) $mapcur)] 8 1 "textures/emblem" ]
 			]
-			guistrut 2
+			guistrut 3
 			guilist [
 				guilist [
 					vardef botbalance		"bot balance"
@@ -373,7 +373,7 @@ newgui game [
 				]
 			]
 			if (> $hasoctapaks 0) [
-				guistrut 4
+				guistrut 6
 				guilist [ guistayopen [
 					guibutton "^fvshow maps from sauerbraten" [
 						if (> $mapocta 0) [mapocta = 0] [mapocta = 1]
