--- a/data/maps/tower.cfg
+++ b/data/maps/tower.cfg
@@ -32,8 +32,8 @@
 // floorz 0.867
 // fog 2800
 // fogcolour 0x400800
-fogdomecap 1
-fogdomeheight -0.5
+// fogdomecap 1
+// fogdomeheight -0.5
 // fogdomemax 1.0
 // fogdomemin 0.0
 // grassanimmillis 3000
@@ -42,7 +42,13 @@ fogdomeheight -0.5
 // grassheight 4
 // grassscale 2
 // gravity 50.0
+// impulsecost 1000
+// impulsecount 5
+// impulsemeter 30000
+// impulseregen 5.0
+// impulseskate 1000
 // impulsespeed 50.0
+// impulsestyle 1
 // jumpspeed 50.0
 // ladderspeed 1.0
 // lavacolour 0xFF4400
