--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -10,7 +10,7 @@ exec "sounds.cfg"
 //		0		Demo
 //		1		Lobby
 //		2		Edit
-//		3		Story
+//		3		Campaign
 //		4		Deathmatch
 //		5		Secure-the-Flag
 //		6		Capture-the-Flag
@@ -31,7 +31,7 @@ demo				= [ stopdemo; start $arg1 0 0x00 ]; complete demo . dmo
 
 lobby				= [ start $arg1 1 0x0000 ]; mapcomplete lobby
 edit				= [ start $arg1 2 0x0000 ]; mapcomplete edit
-story				= [ start $arg1 3 0x0000 ]; mapcomplete story
+campaign			= [ start $arg1 3 0x0000 ]; mapcomplete campaign
 deathmatch			= [ start $arg1 4 0x0000 ]; mapcomplete deathmatch; dm = [ deathmatch $arg1 ]
 instagib			= [ start $arg1 4 0x0004 ]; mapcomplete instagib; insta = [ instagib $arg1 ]
 arena				= [ start $arg1 4 0x0020 ]; mapcomplete arena
