--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -326,7 +326,7 @@ newgui game [
 					guitext "gamemode"
 					//guiradio "lobby"						modeselected 1
 					guiradio "editing"						modeselected 2
-					guiradio "story"						modeselected 3
+					guiradio "campaign"						modeselected 3
 					guiradio "deathmatch"					modeselected 4
 					guiradio "secure-the-flag"				modeselected 5
 					guiradio "capture-the-flag"				modeselected 6
