ragdoll.h fix, increase fog in storytest for better performance
Former-commit-id: 72cd677221cdb6194eced42496f979af308f4a7e

--- a/data/maps/storytest.cfg
+++ b/data/maps/storytest.cfg
@@ -30,12 +30,12 @@
 // flarelights 0
 // floorcurb 5.0
 // floorz 0.867
-// fog 1000
+fog 300
 // fogcolour 0x996600
-// fogdomecap 0
-// fogdomeheight -0.5
-// fogdomemax 0.0
-// fogdomemin 0.0
+fogdomecap 1
+fogdomeheight 0.2
+fogdomemax 1.0
+fogdomemin 0.1
 // grassanimmillis 3000
 // grassanimscale 0.03
 // grassblend 1.0
