--- a/data/examples/servexec.cfg
+++ b/data/examples/servexec.cfg
@@ -45,6 +45,7 @@
 // sv_itemdropping 1 // determines if items drop, or respawn back at their original position
 // sv_itemspawntime 30000 // time in milliseconds before items (re)spawn
 // sv_itemspawndelay 1000 // time in milliseconds after map start items first spawn
+// sv_itemthreshold 2 // if numspawned < numclients*this, spawn one of this type
 // sv_itemspawnstyle 1 // determines the timing of item spawning at map start; 0 = all at once, 1 = staggered, 2 = random
 // sv_kamikaze 1 // determines the level of kamikaze events; 0 = never, 1 = holding grenade, 2 = have grenade, 3 = always
 // sv_timelimit 15 // time in minutes before round ends; 0 = off
