--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -547,6 +547,7 @@ newgui game [
 					vardef itemspawntime		"item spawn time"
 					vardef itemspawndelay		"item spawn delay"
 					vardef itemspawnstyle		"item spawn style"
+					vardef itemthreshold		"item threshold"
 					vardef regendelay			"regen delay"
 					vardef regentime			"regen time"
 				]
@@ -582,6 +583,7 @@ newgui game [
 					varfld itemspawntime 16
 					varfld itemspawndelay 16
 					varfld itemspawnstyle 16
+					varfld itemthreshold 16
 					varfld regendelay 16
 					varfld regentime 16
 				]
